--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,21 @@
     <groupId>com.kilfat</groupId>
     <artifactId>budgetkeeper</artifactId>
     <version>1.0</version>
+    <properties>
+        <spring.version>5.0.1.RELEASE</spring.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
