--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,11 @@
 # datasource
-datasource.driver=org.postgresql.Driver
-datasource.url=jdbc:postgresql:budgetkeeper
-datasource.username=user
-datasource.password=password
-
+datasource.driver=org.hsqldb.jdbcDriver
+datasource.url=jdbc:hsqldb:mem
+datasource.username=sa
+datasource.password=
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
 hibernate.batch.size=20
 hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
