--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <junit.version>4.12</junit.version>
         <hsqldb.version>2.4.0</hsqldb.version>
         <slf4j.version>1.7.21</slf4j.version>
-        <log4j.version>2.9.0</log4j.version>
+        <log4j.version>2.8.2</log4j.version>
     </properties>
 
     <dependencies>
@@ -126,6 +126,12 @@
                     <httpConnector>
                         <port>8088</port>
                     </httpConnector>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>spring.profiles.active</name>
+                            <value>hsqldb</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
             <plugin>
