--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,7 +5,7 @@ datasource.username=sa
 datasource.password=
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
 hibernate.batch.size=20
 hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
