--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <hibernate.validator.version>5.4.2.Final</hibernate.validator.version>
+        <jsonpath.version>2.4.0</jsonpath.version>
     </properties>
 
     <dependencies>
@@ -129,6 +130,18 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>${javax.validation.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${jsonpath.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path-assert</artifactId>
+            <version>${jsonpath.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
