--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,24 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.3.2"
   },
   "devDependencies": {
+    "apidoc": "^0.17.6",
+    "babel-plugin-component": "^0.9.1",
+    "babel-preset-es2015": "^6.24.1",
+    "cssnano": "^3.10.0",
+    "curvejs": "^0.3.3",
+    "element-ui": "^1.3.5",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "postcss-loader": "^2.0.3",
+    "style-loader": "^0.16.1",
+    "vue": "^2.2.6",
+    "webpack-dev-server": "^2.4.2",
     "autoprefixer": "^7.1.2",
     "axios": "^0.16.2",
     "babel-core": "^6.22.1",
